<resources>
    <string name="app_name">foodshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="dinner">Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="drinks">Drinks</string>
    <string name="info">Information</string>
    <string name="cart">Cart</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="address">Address:</string>
    <string name="this_is_a_exemple">This is a exemple</string>
</resources>
